force-app/main/default/objects/ssot__KnowledgeArticleVersion__dlm/fields/LargeLanguageModel__c.field-meta.xml
<CustomField>
    <fullName>LargeLanguageModel__c</fullName>
    <label>Large Language Model</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>