force-app/main/default/objects/ssot__KnowledgeArticleVersion__dlm/fields/MigratedToFromArticleVersion__c.field-meta.xml
<CustomField>
    <fullName>MigratedToFromArticleVersion__c</fullName>
    <label>Mapping info between old Article Version</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>